资源目录树选择弹框